# quiplash

./: Cargo.toml  Dockerfile  README.md
data/: ao.txt  non-pg.txt  pg.txt
src/: main.rs
